--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "homepage": "https://baptizedandordained.com",
+    "homepage2": "https://baptizedandordained.org",
     "scripts": {
       "shorten": "netlify-shortener"
     }
